[gd_scene load_steps=4 format=3 uid="uid://f15bsnnuhv1k"]

[ext_resource type="Script" path="res://item.gd" id="1_k8xnf"]
[ext_resource type="Texture2D" uid="uid://d2b4xokobvp2n" path="res://sprites/Acessorios/Soappy_Boots.png" id="2_68t30"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qllp8"]
size = Vector2(114, 116)

[node name="itemBoots" type="Area2D" groups=["Acessorios"]]
script = ExtResource("1_k8xnf")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_68t30")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_qllp8")
