[gd_scene load_steps=4 format=3 uid="uid://cyhu7m6lho6q8"]

[ext_resource type="Script" path="res://item.gd" id="1_wuglh"]
[ext_resource type="Texture2D" uid="uid://d25k8rrscw5ug" path="res://sprites/Acessorios/Bubble_Gum.png" id="2_6rgde"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qllp8"]
size = Vector2(114, 116)

[node name="itemBublegum" type="Area2D"]
script = ExtResource("1_wuglh")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_6rgde")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_qllp8")
