[gd_scene load_steps=4 format=3 uid="uid://ccrc1um0jten6"]

[ext_resource type="Script" path="res://item.gd" id="1_rb1wb"]
[ext_resource type="Texture2D" uid="uid://jnpajgcnv4qn" path="res://icon.svg" id="2_83yj1"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qllp8"]
size = Vector2(114, 116)

[node name="itemGold" type="Area2D"]
script = ExtResource("1_rb1wb")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_83yj1")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_qllp8")
