[gd_scene load_steps=4 format=3 uid="uid://bfny6n2rt37tt"]

[ext_resource type="Script" path="res://item.gd" id="1_q4ota"]
[ext_resource type="Texture2D" uid="uid://0fuyh51bm446" path="res://sprites/Acessorios/Pop_Shield.png" id="2_gfcpl"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qllp8"]
size = Vector2(114, 116)

[node name="itemShield" type="Area2D" groups=["Acessorios", "Escudo"]]
script = ExtResource("1_q4ota")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_gfcpl")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_qllp8")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
volume_db = 1.0
