[gd_scene load_steps=4 format=3 uid="uid://bd3yfncty63h0"]

[ext_resource type="Script" path="res://item.gd" id="1_xo32s"]
[ext_resource type="Texture2D" uid="uid://jnpajgcnv4qn" path="res://icon.svg" id="2_we20u"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qllp8"]
size = Vector2(114, 116)

[node name="itemXP" type="Area2D"]
script = ExtResource("1_xo32s")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_we20u")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_qllp8")
